# Rpi-Pico-W-BLE-Beacon

./: README.md
ble_altbeacon/: CMakeLists.txt  ble_beacon.c  btstack_config.h
ble_beacon/: CMakeLists.txt  ble_beacon.c  gatt_counter.gatt
ble_beacon/BLE Beacon UF2/1Hz/: Beacon 01 1Hz.uf2  Beacon 02 1Hz.uf2  Beacon 03 1Hz.uf2  Beacon 04 1Hz.uf2  Beacon 05 1Hz.uf2
ble_beacon/BLE Beacon UF2/2Hz/: Beacon 01 2Hz.uf2  Beacon 02 2Hz.uf2  Beacon 03 2Hz.uf2  Beacon 04 2Hz.uf2  Beacon 05 2Hz.uf2
ble_beacon/BLE Beacon UF2/4Hz/: Beacon 01 4Hz.uf2  Beacon 02 4Hz.uf2  Beacon 03 4Hz.uf2  Beacon 04 4Hz.uf2  Beacon 05 4Hz.uf2
